[package]
name = "lgm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
pulsar = "5.1"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.6"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
ratatui = { version = "0.25.0", features = ["all-widgets"]}
crossterm = "0.27"
