[package]
name = "lgm"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
pulsar = "5.1"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.6"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
ratatui = { version = "0.26.1", features = ["all-widgets"]}
crossterm = "0.27"
serde_urlencoded = "0.7.1"
anyhow = "1.0.79"
toml = "0.8.10"
pulsar-admin-sdk = "2.1.0"
clipboard = "0.5.0"
chrono = "0.4.35"
itertools = "0.12.1"
clap = { version = "4.5.4", features = ["derive"] }
