[package]
name = "lgm"
version = "1.8.0"
authors = ["bloznelis <lukas.bloznelis@gmail.com>"]
description = "Pulsar cluster managment in terminal"
license = "MIT"
homepage = "https://github.com/bloznelis/lgm"
repository = "https://github.com/bloznelis/lgm"
edition = "2021"
keywords = ["pulsar", "terminal", "tui"]
readme = "README.md"

[dependencies]
futures = "0.3"
pulsar = "6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
ratatui = { version = "0.26", features = ["all-widgets"]}
crossterm = "0.27"
serde_urlencoded = "0.7"
anyhow = "1.0"
toml = "0.8"
pulsar-admin-sdk = "2.2.0"
clipboard = "0.5"
chrono = "0.4"
itertools = "0.12"
clap = { version = "4.5", features = ["derive"] }
uuid = "1.8.0"
log = "0.4"
simple-logging = "2.0.2"
